--- a/nosotros.html
+++ b/nosotros.html
@@ -32,35 +32,35 @@
     <div class="container">
         <h1 class="titulo-seccion">Learn More About Us and Our Team</h1>
         <div class="team-member">
-            <img src="images/user.png" alt="Cesar Hernandez">
+            <img src="images/User1.png" alt="Cesar Hernandez">
             <div class="info">
                 <h2>Cesar Hernandez</h2>
                 <p>Cesar is the visionary of the group, always imagining new concepts and exciting game mechanics.</p>
             </div>
         </div>
         <div class="team-member">
-            <img src="images/user.png" alt="Luis Garza">
+            <img src="images/User3.png" alt="Luis Garza">
             <div class="info">
                 <h2>Luis Garza</h2>
                 <p>Luis is the technical genius, capable of turning ideas into reality with his expertise in programming and software development.</p>
             </div>
         </div>
         <div class="team-member">
-            <img src="images/user.png" alt="Adrian Rodriguez">
+            <img src="images/User2.png" alt="Adrian Rodriguez">
             <div class="info">
                 <h2>Adrian Rodriguez</h2>
                 <p>Adrian is the creative artist, bringing worlds and characters to life with his talent in graphic design and animation.</p>
             </div>
         </div>
         <div class="team-member">
-            <img src="images/user.png" alt="Pablo Manriquez">
+            <img src="images/user5.png" alt="Pablo Manriquez">
             <div class="info">
                 <h2>Pablo Manriquez</h2>
                 <p>Pablo is the business expert, ensuring that the studio grows sustainably and succeeds in the market.</p>
             </div>
         </div>
         <div class="team-member">
-            <img src="images/userf.png" alt="Karina Carreon">
+            <img src="images/User4.png" alt="Karina Carreon">
             <div class="info">
                 <h2>Karina Carreon</h2>
                 <p>Karina is the newest member of the team and is a marketing strategist, responsible for developing innovative campaigns and managing social media presence to reach a wider audience.</p>
