--- a/ventas.html
+++ b/ventas.html
@@ -22,8 +22,6 @@
             <img src="images/cart-count.png" alt="Carrito de Compras">
             <span class="cart-count">0</span>
         </div>
-
-
     </nav>
 
     <div class="container">
@@ -36,25 +34,21 @@
                     <h2 class="videojuego-title">The University of the Damned</h2>
                     <p class="videojuego-description">
                         Descripción:
-                    <ul style="text-align: justify;">
-                        <li><strong>Genre:</strong> Mystery adventure and supernatural action.</li>
-                        <li><strong>World:</strong> Explore an enigmatic university where every hallway hides a dark
-                            secret.</li>
-                        <li><strong>Characters:</strong> Take on the role of two daring students willing to defy the
-                            impossible to save their friend and uncover the truth.</li>
-
-                    </ul>
+                        <ul style="text-align: justify;">
+                            <li><strong>Genre:</strong> Mystery adventure and supernatural action.</li>
+                            <li><strong>World:</strong> Explore an enigmatic university where every hallway hides a dark secret.</li>
+                            <li><strong>Characters:</strong> Take on the role of two daring students willing to defy the impossible to save their friend and uncover the truth.</li>
+                        </ul>
+                        <p style="text-align: justify;"><strong>Prepare to confront your fears and uncover the conspiracy hidden within the school.</strong></p>
                     </p>
-                    <p style="text-align: justify;"><strong>Prepare to confront your fears and uncover the conspiracy hidden within the school.</strong></p>
                     <p class="videojuego-price">$950</p>
-                    <div class="botones-container">
-                        <button class="comprar-button"
-                            onclick="comprarAhora('The University of the Damned', 950,'images/videojuego1.png')">Buy</button>
-                        <button class="agregar-carrito-button"
-                            onclick="agregarAlCarrito('The University of the Damned', 950, 'images/videojuego1.png')">Add to Cart</button>
-                    </div>
+                </div>
+                <div class="botones-container">
+                    <button class="comprar-button" onclick="comprarAhora('The University of the Damned', 950, 'images/videojuego1.png')">Buy</button>
+                    <button class="agregar-carrito-button" onclick="agregarAlCarrito('The University of the Damned', 950, 'images/videojuego1.png')">Add to Cart</button>
                 </div>
             </div>
+
             <!-- Videojuego 2 -->
             <div class="videojuego-item">
                 <img src="images/videojuego2.png" alt="Videojuego 2" class="videojuego-image">
@@ -67,16 +61,16 @@
                             <li><strong>World:</strong> Discover a vast realm filled with enigmas and legendary creatures.</li>
                             <li><strong>Characters:</strong> Embody a legendary hero, forge alliances, and challenge powerful enemies.</li>
                         </ul>
-                        <p style="text-align: justify;"><strong>Prepare for an exciting experience filled with combat and magic.</strong></p>                        
+                        <p style="text-align: justify;"><strong>Prepare for an exciting experience filled with combat and magic.</strong></p>
+                    </p>
                     <p class="videojuego-price">$1,150</p>
-                    <div class="botones-container">
-                        <button class="comprar-button"
-                            onclick="comprarAhora('Kingdoms of Eternity', 1150, 'images/videojuego2.png')">Buy</button>
-                        <button class="agregar-carrito-button"
-                            onclick="agregarAlCarrito('Kingdoms of Eternity', 1150, 'images/videojuego2.png')">Add to Cart</button>
-                    </div>
+                </div>
+                <div class="botones-container">
+                    <button class="comprar-button" onclick="comprarAhora('Kingdoms of Eternity', 1150, 'images/videojuego2.png')">Buy</button>
+                    <button class="agregar-carrito-button" onclick="agregarAlCarrito('Kingdoms of Eternity', 1150, 'images/videojuego2.png')">Add to Cart</button>
                 </div>
             </div>
+
             <!-- Videojuego 3 -->
             <div class="videojuego-item">
                 <img src="images/videojuego3.png" alt="Videojuego 3" class="videojuego-image">
@@ -90,16 +84,15 @@
                             <li><strong>Characters:</strong> Form a team of daring explorers with unique skills.</li>
                         </ul>
                         <p style="text-align: justify;"><strong>Explore a mysterious world and uncover the secrets of a lost civilization.</strong></p>
-                        
+                    </p>
                     <p class="videojuego-price">$1,150</p>
-                    <div class="botones-container">
-                        <button class="comprar-button"
-                            onclick="comprarAhora('Lost Lands', 1150, 'images/videojuego3.png')">Buy</button>
-                        <button class="agregar-carrito-button"
-                            onclick="agregarAlCarrito('Lost Lands', 1150, 'images/videojuego3.png')">Add to Cart</button>
-                    </div>
+                </div>
+                <div class="botones-container">
+                    <button class="comprar-button" onclick="comprarAhora('Lost Lands', 1150, 'images/videojuego3.png')">Buy</button>
+                    <button class="agregar-carrito-button" onclick="agregarAlCarrito('Lost Lands', 1150, 'images/videojuego3.png')">Add to Cart</button>
                 </div>
             </div>
+
             <!-- Videojuego 4 -->
             <div class="videojuego-item">
                 <img src="images/videojuego4.png" alt="Videojuego 4" class="videojuego-image">
@@ -107,23 +100,20 @@
                     <h2 class="videojuego-title">Space Odyssey</h2>
                     <p class="videojuego-description">
                         Descripción:
-                    <ul style="text-align: justify;">
                         <ul style="text-align: justify;">
                             <li><strong>Genre:</strong> Action role-playing game with space exploration and strategic combat.</li>
                             <li><strong>World:</strong> A vast universe with unknown planets and secrets to uncover.</li>
                             <li><strong>Characters:</strong> Choose from various character classes and customize your hero.</li>
                         </ul>
                         <p style="text-align: justify;"><strong>Embark on an epic journey through the cosmos with a daring crew.</strong></p>
-                        
+                    </p>
                     <p class="videojuego-price">$1,750</p>
-                    <div class="botones-container">
-                        <button class="comprar-button"
-                            onclick="comprarAhora('Space Odyssey', 1750, 'images/videojuego4.png')">Buy</button>
-                        <button class="agregar-carrito-button"
-                            onclick="agregarAlCarrito('Space Odyssey', 1750, 'images/videojuego4.png')">Add to Cart</button>
-                    </div>
                 </div>
-            </div>,
+                <div class="botones-container">
+                    <button class="comprar-button" onclick="comprarAhora('Space Odyssey', 1750, 'images/videojuego4.png')">Buy</button>
+                    <button class="agregar-carrito-button" onclick="agregarAlCarrito('Space Odyssey', 1750, 'images/videojuego4.png')">Add to Cart</button>
+                </div>
+            </div>
         </div>
         <div id="carrito"></div>
     </div>
