--- a/ventas.html
+++ b/ventas.html
@@ -45,8 +45,11 @@
                 </div>
                 <div class="botones-container">
                     <button class="comprar-button" onclick="comprarAhora('The University of the Damned', 950, 'images/videojuego1.png')">Buy</button>
+                    <button class="comprar-button" onclick="window.open('https://csrtech-studio.github.io/Game/', '_blank')">Demo</button>
                     <button class="agregar-carrito-button" onclick="agregarAlCarrito('The University of the Damned', 950, 'images/videojuego1.png')">Add to Cart</button>
+                    
                 </div>
+                
             </div>
 
             <!-- Videojuego 2 -->
