--- a/pago.html
+++ b/pago.html
@@ -47,6 +47,9 @@
 
             <label for="cvv">CVV:</label>
             <input type="text" id="cvv" required pattern="\d{3}" maxlength="3" placeholder="123">
+            
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="usuario@example.com">
 
             <button type="submit" id="finalizar-compra">Finalize Purchase</button>
         </form>
