--- a/Vendedores.html
+++ b/Vendedores.html
@@ -36,7 +36,8 @@
         <label for="imageCount">Cantidad de Equipos a Instalar:</label>
         <input type="number" id="imageCount" name="imageCount" min="1" max="50" placeholder="Cantidad" required><br><br>
 
-        <div id="imagesContainer"></div>
+        <div id="imagesContainer" class="miniaturas-container"></div>
+
 
         <button type="button" id="locationButton" style="margin-top: 10px;">Guardar Ubicación</button>
 
